--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Minecraft Bot Control Panel</title>
+  <title>ChatLogger Control Panel</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -75,7 +75,7 @@
   </style>
 </head>
 <body>
-  <h1>Minecraft Bot Control Panel</h1>
+  <h1>ChatLogger Control Panel</h1>
 
   <div id="command-form">
     <input type="text" id="command-input" placeholder="Enter command (e.g., f 5)" />
@@ -143,5 +143,7 @@
       }
     });
   </script>
+  <h6>Shitty WebUI for ChatLogger</h6>
+  <h6>Made By Xargana</h6>
 </body>
 </html>
