--- a/public/settings/index.html
+++ b/public/settings/index.html
@@ -10,17 +10,14 @@
 </head>
 <body>
   <div id="main">
-    <div id="top">
-      <h1>ChatLogger Control Panel</h1>
-    </div>
-
     <div id="tabs">
+      <h3>ChatLogger</h3>
+      <button class="tab-button" data-tab="">Console</button>
       <button class="tab-button" data-tab="logs">Logs</button>
       <button class="tab-button" data-tab="settings", id="tab-chosen">Settings</button>
       <button class="tab-button" data-tab="scripts">Scripts</button>
       <button class="tab-button" data-tab="bots">Bots</button>
       <button class="tab-button" data-tab="info">Info</button>
-      <button class="tab-button" data-tab=" ">Console</button>
     </div>
 
     <div id="main-middle">
