--- a/public/bots/index.html
+++ b/public/bots/index.html
@@ -14,7 +14,7 @@
       <h3>ChatLogger</h3>
       <button class="tab-button" data-tab="">Console</button>
       <button class="tab-button" data-tab="logs">Logs</button>
-      <button class="tab-button" data-tab="settings">Settings</button>
+      <button class="tab-button" data-tab="configs">Configs</button>
       <button class="tab-button" data-tab="scripts">Scripts</button>
       <button class="tab-button" data-tab="bots" id="tab-chosen">Bots</button>
       <button class="tab-button" data-tab="info">Info</button>
