--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <h3>ChatLogger</h3>
     <button class="tab-button" data-tab="", id="tab-chosen">Console</button>
     <button class="tab-button" data-tab="logs">Logs</button>
-    <button class="tab-button" data-tab="settings">Settings</button>
+    <button class="tab-button" data-tab="configs">Configs</button>
     <button class="tab-button" data-tab="scripts">Scripts</button>
     <button class="tab-button" data-tab="bots">Bots</button>
     <button class="tab-button" data-tab="info">Info</button>
