--- a/public/scripts/index.html
+++ b/public/scripts/index.html
@@ -14,12 +14,11 @@
       <h3>ChatLogger</h3>
       <button class="tab-button" data-tab="">Console</button>
       <button class="tab-button" data-tab="logs">Logs</button>
-      <button class="tab-button" data-tab="settings">Settings</button>
+      <button class="tab-button" data-tab="configs">Configs</button>
       <button class="tab-button" data-tab="scripts", id="tab-chosen">Scripts</button>
       <button class="tab-button" data-tab="bots">Bots</button>
       <button class="tab-button" data-tab="info">Info</button>
     </div>
-
     <div id="main-middle">
       <div id="script">
         <textarea id="script-content" rows="10" cols="50" placeholder="Enter your script here" style="white-space: pre-wrap;"></textarea>
@@ -28,7 +27,7 @@
             <button id="script-new", onclick="createScriptFromWeb()">New</button>
             <button id="script-import-btn">Import</button>
             <input type="file" accept=".cls" id="script-import" style="display: none;">
-            <button id="script-refrash" onclick="getList()">Refrash</button>
+            <button id="script-refrash" onclick="getList()">Refresh</button>
           </div>
           <div id="scripts">
           </div>
